backend/kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  labels:
    app: rental-backend
spec:
  selector:
    app: rental-backend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
